--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,3 +1,7 @@
+.footer {
+  padding-top: 20px;
+}
+
 .icons {
   float: left;
   padding-left: 10px;
