--- a/src/components/Projects/project.css
+++ b/src/components/Projects/project.css
@@ -1,7 +1,7 @@
 .headline {
   text-align: center;
-  font-family: "Advent Pro", sans-serif;
-  font-size: 40px;
+  /* font-family: "Advent Pro", sans-serif; */
+  font-size: 25px;
   padding-bottom: 15px;
 }
 
