--- a/src/components/Tech/tech.css
+++ b/src/components/Tech/tech.css
@@ -5,9 +5,9 @@
 }
 
 .tech-header {
-  font-family: "Advent Pro", sans-serif;
+  /* font-family: "Advent Pro", sans-serif; */
   text-align: center;
-  font-size: 40px;
+  font-size: 25px;
   padding-bottom: 15px;
   padding-top: 20px;
 }
